response entity remove and query fix in checkApprovestatus

--- a/EBPSv2/pom.xml
+++ b/EBPSv2/pom.xml
@@ -89,7 +89,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>EBPSv2</finalName>
+        <finalName>TestEbps</finalName>
           <!--<finalName>EBPS</finalName>-->
          <!--<finalName>InaruwaEBPS</finalName>-->
         <!--<finalName>kankaiebps</finalName>-->
